--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html body {
   position: relative;
   z-index: -1;
   overflow: hidden;
+  color: aliceblue;
 
 }
 
@@ -41,7 +42,8 @@ main {
   height: 100%;
   width: 10%;
   background-color: rgb(15, 32, 99);
-  border: .5vh solid black
+  border: .5vh solid black;
+  
 }
 #canvas{
     display: flex;
@@ -55,19 +57,29 @@ main {
     z-index: -1;
     
 }
+#color-bar{
+  background-color: rgb(15, 32, 99);
+  height: 100%;
+  width: 10%;
+  border: .5vh solid black;
+  display: flex;
+  flex-direction: column;
+}
 #palette{
-    background-color: rgb(15, 32, 99);
-    height: 100%;
-    width: 10%;
-    border: .5vh solid black;
+    overflow-y: scroll;
     display: grid;
-    grid-template-rows: repeat(10,1fr);
-    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(5,1fr);
+    grid-template-columns: repeat(4,1fr);
+    height: 30%;
+    margin-left: 10%;
+    margin-right: 10%;
 /* Adjust the number of columns as needed */
+}
+#color-picker{
+  width: 50%;
+  margin-left: 10%;
 
 }
-
-
 
 footer{
   height: 5%;
