--- a/style.css
+++ b/style.css
@@ -45,17 +45,27 @@ main {
   border: .5vh solid black;
   
 }
+#canvas-back{
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+  aspect-ratio: 1 / 1; 
+  box-sizing:border-box;
+  box-shadow: 0px 0px 10px 10px #000000;
+  position: relative;
+  z-index: -2;
+  color: rgb(226, 226, 226);
+  
+}
+
 #canvas{
     display: flex;
     flex-wrap: wrap;
-    background-color: white;
-    width: 50%;
+    width: 100%;
     aspect-ratio: 1 / 1; 
     box-sizing:border-box;
-    box-shadow: 0px 0px 10px 10px #000000;
-    position: relative;
-    z-index: -1;
-    
+    position: absolute;
+    z-index: -1;    
 }
 #color-bar{
   background-color: rgb(15, 32, 99);
@@ -76,13 +86,24 @@ main {
 /* Adjust the number of columns as needed */
 }
 #color-picker{
-  width: 50%;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  
+}
+#selected-color{
+  width: 40%;
+  aspect-ratio: 1 / 1; 
+  background-color: blue;
   margin-left: 10%;
+  box-sizing:border-box;
+  border: .2em solid black;
 
 }
 
 footer{
   height: 5%;
   background-color: rgb(15, 32, 99);
-  border: .5vh solid black
+  border: .5vh solid black;
+  color: rgba(255, 255, 255, 0.952)
 }
