--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
   align-items: center;
   height: 100%;
   width: 80%;
-  background-image: url(retroBackground.jpg);
+  background-image: url(./Assets/retroBackground.jpg);
   box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.8);
   position: relative;
   z-index: -1;
@@ -43,7 +43,22 @@ main {
   width: 10%;
   background-color: rgb(15, 32, 99);
   border: .5vh solid black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   
+}
+.tools{
+  margin-left: 10%;
+  width: 30%;
+  background-color:aliceblue
+  
+}
+.icon{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
 }
 #canvas-back{
   display: flex;
