--- a/style.css
+++ b/style.css
@@ -11,15 +11,39 @@ html body {
 }
 
 header {
-  height: 8%;
+  display: flex;
+  height: 5%;
   background-color:rgb(15, 32, 99);
-  text-align: center;
-  border: .5vh solid black
+  border: .5vh solid black;
+  justify-content:center;
+
+}
+
+header h1{
+  margin: 0;
+  margin-left: 1em;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 1;
+
+}
+
+.dropdown-items{
+    width: 100%;
 }
 
 main {
   display: flex;
-  height: 87%;
+  height: 90%;
   background-color: #FBECB2;
   align-items: center;
   position: relative;
