--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html body {
   z-index: -1;
   overflow: hidden;
   color: aliceblue;
+  font-family: 'Courier New', Courier, monospace;
 
 }
 
@@ -16,30 +17,70 @@ header {
   background-color:rgb(15, 32, 99);
   border: .5vh solid black;
   justify-content:center;
+  font-size: 1rem;
 
 }
 
 header h1{
   margin: 0;
-  margin-left: 1em;
+  margin-left: 10em;
 }
 
 .dropdown{
-  position: relative;
-  display: inline-block;
+  /* position: relative; */
+  height: 100%;
+  margin: 0;
+  margin-right: 1em;
+
 }
 
 .dropdown-content{
+  height: 100%;
   display: flex;
   flex-direction: column;
   position: absolute;
   z-index: 1;
+  margin: 0;
+  
 
 }
+.dropbtn{
+  height: 100%;
+  box-sizing:border-box;
+  background-color: aliceblue;
+  font-size: large;
+  width: 100%;
+}
+
+.dropbtn:hover{
+  background-color: rgb(137, 154, 168);
+}
+
 
 .dropdown-items{
-    width: 100%;
+  display:flex;
+  min-width: 10em;
 }
+
+.dropdown-item:hover{
+  background-color: rgb(137, 154, 168);
+}
+
+.dropdown-item{
+  width: 80%;
+  height: 100%;
+  background-color: aliceblue;
+}
+
+.dropdown-remove{
+  width: 20%;
+  height: 100%;
+  background-color: darkred;
+}
+.dropdown-remove:hover{
+  background-color: rgb(88, 2, 2);
+}
+
 
 main {
   display: flex;
